--- a/.github/workflows/myworkflow.yml
+++ b/.github/workflows/myworkflow.yml
@@ -39,6 +39,7 @@ jobs:
           echo Add other actions to build,
           echo test, and deploy your project.
   test:
+    needs: build
     runs-on: ubuntu-latest
     steps:
       - name: Test 1
@@ -46,7 +47,8 @@ jobs:
       - name: Test 2
         run: echo This is code format testing.
   deploy:
-     runs-on: ubuntu-latest
-     steps:
+    needs: test
+    runs-on: ubuntu-latest
+    steps:
       - name: Deploy to Production
         run: echo Deploying to production server...
